--- a/gb/21/12/23/n13455264.md
+++ b/gb/21/12/23/n13455264.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yukuxf383/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yukuxf383/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yukuxf383/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yukuxf383/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yukuxf383/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yukuxf383/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yukuxf383/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yukuxf383/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yukuxf383/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yukuxf383/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yukuxf383/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yukuxf383/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yukuxf383/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yukuxf383/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yukuxf383/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>明年开放福岛食品进口？ 台经长：目前未做讨论</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13455266-533571-600x400.jpg" />
 <h6>立法院经济委员会23日邀请经济部长王美花（左）专案报告“开放日本核食对台湾加入CPTPP的影响与因应之策”，并备质询。（中央社）
 </h6>
 <hr>
-<p>【大纪元2021年12月23日讯】（大纪元记者徐翠玲台湾台北报导）台湾申请加入《跨太平洋伙伴全面进步协定》（CPTPP），<ahref="https://github.com/yukuxf383/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC.md#1">日本</a>为CPTPP的会员国之一，是否因此开放日本<ahref="https://github.com/yukuxf383/djy/blob/master/gb/tag/%E7%A6%8F%E5%B2%9B.md#1">福岛</a>等5县市产品进口备受瞩目。立委曾铭宗说，国安高层已作成决策，可能明年第一季就会开放<ahref="https://github.com/yukuxf383/djy/blob/master/gb/tag/%E6%A0%B8%E9%A3%9F.md#1">核食</a>进口，<ahref="https://github.com/yukuxf383/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>长王美花回应，目前没有做这样的讨论，她个人并未收到相关讯息。</p>
-<p>曾铭宗在立法院经济委员会质询时表示，就他理解国安高层已经做了决策，可能在明年的第1季开放<ahref="https://github.com/yukuxf383/djy/blob/master/gb/tag/%E6%A0%B8%E9%A3%9F.md#1">核食</a>，他呼吁蔡政府不要那么霸道、傲慢，不要不在乎2018年支持反核食公投的779万民意，一意孤行要开放，他也质疑，开放核食真的有助于台湾加入CPTPP。</p>
-<p>王美花说，<ahref="https://github.com/yukuxf383/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC.md#1">日本</a><ahref="https://github.com/yukuxf383/djy/blob/master/gb/tag/%E7%A6%8F%E5%B2%9B.md#1">福岛</a>五县市<ahref="https://github.com/yukuxf383/djy/blob/master/gb/tag/%E9%A3%9F%E5%93%81.md#1">食品</a>，一直是日本最关心的议题，所以跟日本交涉时，日本会提出来。至于日本会不会开出很多其他条件，根本无助于加入CPTPP？她说，加入自由贸易协定很辛苦要一关一关去过。日本在台湾提出申请之后，就表达支持台湾加入，这对台湾是非常重要的帮助。曾铭宗也曾长期担任政府官员，知道台湾的国际处境，所以台湾要争取更多的国家支持。</p>
-<p>立委林岱桦提醒，台湾对核能有恐惧，对核废料、核污染有疑虑，日本福岛五县市<ahref="https://github.com/yukuxf383/djy/blob/master/gb/tag/%E9%A3%9F%E5%93%81.md#1">食品</a>进口与否，除了科学与食安之外，应考量国人谨小慎微的国情。</p>
+<p>【大纪元2021年12月23日讯】（大纪元记者徐翠玲台湾台北报导）台湾申请加入《跨太平洋伙伴全面进步协定》（CPTPP），<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC.md#1">日本</a>为CPTPP的会员国之一，是否因此开放日本<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A6%8F%E5%B2%9B.md#1">福岛</a>等5县市产品进口备受瞩目。立委曾铭宗说，国安高层已作成决策，可能明年第一季就会开放<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%A0%B8%E9%A3%9F.md#1">核食</a>进口，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>长王美花回应，目前没有做这样的讨论，她个人并未收到相关讯息。</p>
+<p>曾铭宗在立法院经济委员会质询时表示，就他理解国安高层已经做了决策，可能在明年的第1季开放<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%A0%B8%E9%A3%9F.md#1">核食</a>，他呼吁蔡政府不要那么霸道、傲慢，不要不在乎2018年支持反核食公投的779万民意，一意孤行要开放，他也质疑，开放核食真的有助于台湾加入CPTPP。</p>
+<p>王美花说，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC.md#1">日本</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A6%8F%E5%B2%9B.md#1">福岛</a>五县市<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A3%9F%E5%93%81.md#1">食品</a>，一直是日本最关心的议题，所以跟日本交涉时，日本会提出来。至于日本会不会开出很多其他条件，根本无助于加入CPTPP？她说，加入自由贸易协定很辛苦要一关一关去过。日本在台湾提出申请之后，就表达支持台湾加入，这对台湾是非常重要的帮助。曾铭宗也曾长期担任政府官员，知道台湾的国际处境，所以台湾要争取更多的国家支持。</p>
+<p>立委林岱桦提醒，台湾对核能有恐惧，对核废料、核污染有疑虑，日本福岛五县市<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A3%9F%E5%93%81.md#1">食品</a>进口与否，除了科学与食安之外，应考量国人谨小慎微的国情。</p>
 <p>王美花回应，在科学依据、国际标准、食安第一之下，未来做相关咨商时，会把委员关切的议题纳入考量。农委会主委陈吉仲表示，2011年3月11日福岛事件之后，当年3月15日开始，全面检测日本18万件产品百分之百都合格。</p>
 <p>林岱桦亦提到，日本2020年农林水产、食品出口五成到中国、香港、台湾、韩国。农委会资料显示，去年进口猪肉加拿大、美国占最大宗，但今年1月至11月，美国猪肉进口量遽减86.8%，如果全面开放福岛五县市食品，是否会像开放莱猪一样消费者通通不买了，造成所有日本食品进口急遽退缩，也要让日本政府知道。</p>
 <p>陈吉仲表示，日本食品贸易样态跟美国猪肉刚好相反，即使因为台湾目前禁止福岛五县8大类食品进口，日本农产品、食品贸易输出到台湾反而没有减少，不会产生像美国猪肉进口量遽减情形。</p>
@@ -23,47 +23,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/20/12/10/n12610735.md#1">台核食进口解禁 需满足三大前提才会谈</a></li>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/21/5/14/n12948038.md#1">日本福岛发生规模6.0地震 核电厂无异常</a></li>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/21/6/22/n13038753.md#1">日本福岛国际UFO研究所将开幕 连结全球同好</a></li>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/21/9/23/n13255489.md#1">福岛五县市食品议题 陈吉仲：会跟日方交换意见</a></li>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/21/9/25/n13260221.md#1">美国解除对日本福岛食品的进口限制</a></li>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/21/9/27/n13264206.md#1">加入CPTPP关键 陈吉仲：没有核食会进口</a></li>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/21/10/24/n13326079.md#1">入CPTPP台密集与会员国洽谈 福岛食品上台日谈判桌</a></li>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/21/12/3/n13414980.md#1">斯洛伐克经济部次长访团5日抵台</a></li>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/21/12/23/n13455343.md#1">泰国邮包验出非洲猪瘟 陈吉仲：加强边境防疫</a></li>
-<li><a href="https://github.com/yukuxf383/djy/blob/master/gb/21/12/22/n13452766.md#1">环球晶冲刺第三代半导体 徐秀兰：明年产能有望倍增</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/10/n12610735.md#1">台核食进口解禁 需满足三大前提才会谈</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/14/n12948038.md#1">日本福岛发生规模6.0地震 核电厂无异常</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/22/n13038753.md#1">日本福岛国际UFO研究所将开幕 连结全球同好</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/23/n13255489.md#1">福岛五县市食品议题 陈吉仲：会跟日方交换意见</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/25/n13260221.md#1">美国解除对日本福岛食品的进口限制</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/27/n13264206.md#1">加入CPTPP关键 陈吉仲：没有核食会进口</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/24/n13326079.md#1">入CPTPP台密集与会员国洽谈 福岛食品上台日谈判桌</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/3/n13414980.md#1">斯洛伐克经济部次长访团5日抵台</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604890.md#1">西方考虑对俄制裁 外媒：在俄车商恐遭殃</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599164.md#1">疫开罐打入日本市场 台经部盼扩及东南亚欧美</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/17/n10064050.md#1" target="_blank">袁斌：由谍战剧《风筝》说到中共特工的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/15/n3683727.md#1" target="_blank">历史回顾：公安部给李洪志先生的感谢信</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927236.md#1" target="_blank">共产暴政录：文革初北京昌平和大兴县大屠杀</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/11/n11377666.md#1" target="_blank">平凡人不凡的修炼经历</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/15/n13439208.md#1">冬至一阳生 吃什么食物特别迎好运？</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/11/n13431562.md#1">【品读宋词】末世壮歌 文天祥的《酹江月》</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/17/n13443991.md#1">【未解之谜】颠覆认知的物理实验</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/15/n13439755.md#1">【百年真相】秦城奇闻 冯基平被关进自建的监狱</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/20/n13449376.md#1">【探索时分】中共不敢打台湾的真实原因（中）</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/22/n13453767.md#1">【财商天下】美国要加息 中共忙圈钱</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/20/n13449122.md#1">病愈复出被问好友王力宏 林书豪当场愣住</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/21/n13451336.md#1">“五毛愤青聚集地”铁血社区将被永久关闭</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/20/n13449250.md#1">王力宏发文道歉 李靓蕾回应媒体“不会告了”</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/20/n13449122.md#1">病愈复出被问好友王力宏 林书豪当场愣住</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/20/n13447910.md#1">王力宏发文道歉 宣布暂时退出演艺圈</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/20/n13449250.md#1">王力宏发文道歉 李靓蕾回应媒体“不会告了”</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/21/n13451501.md#1">吴尊被网友留言提醒：千万不要让人掉眼镜啊</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/21/n13451265.md#1">王力宏返台 基隆议员张之豪：还是自由民主好</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/21/n13449697.md#1">冬天的排毒菜 一碗大白菜汤养肠胃、补元气</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/21/n13449965.md#1">黄豆芽、绿豆芽哪个好？这碗豆芽汤解毒、消水肿</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/22/n13453532.md#1">Omicron攻入四省 专家：将是中国最大威胁</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/21/n13450771.md#1">纽约富人的八个共同点</a></li>
-<li><a href="https://github.com/ivtnwl363/djy/blob/master/gb/21/12/20/n13448121.md#1">美国龙卷风吹走两名婴儿 双双奇迹生还</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yukuxf383/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yukuxf383/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/23/n13455264.htm">明年开放福岛食品进口？ 台经长：目前未做讨论</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/23/n13455264.htm">明年开放福岛食品进口？ 台经长：目前未做讨论</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yukuxf383/djy/blob/master/gb/21/12/23/n13455264.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yukuxf383/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yukuxf383/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yukuxf383/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yukuxf383/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yukuxf383/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/12/23/n13455264.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
